# spc

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CompilerOptions.cmake  FindExternal.cmake  PackageExport.cmake  README.md  SPCConfig.cmake.in  SPCConfig.in.cmake  SpcConfig.cmake.in  SpcConfigVersion.cmake.in  Versioning.cmake  index.html
examples/: CMakeLists.txt  example_attitude.cpp  example_time_series_generator.cpp  fft_filter.cpp  tmp.cpp
osg_test/: CMakeLists.txt  osgviewerqt.cpp  osgviewerqt.h  test1.cpp
qGEO/: CMakeLists.txt  FindQwt6.cmake  qGEO.cpp  qGEO.h  qGEO.qrc
qGEO/geoutils/: AttitudeToModel.cpp  CMakeLists.txt  ComputeStratigraphicPosition.cpp  ComputeStratigraphicPosition.h  ComputeTimeSeries.cpp  ComputeTimeSeries.h  EvaluateStratigraphicPosition.cpp  EvaluateStratigraphicPosition.h  FitAttitude.cpp  FitGeologicalOrientation.cpp  FitGeologicalOrientation.h  Makefile  Properties.cpp  SetUpNewSeries.cpp  SetUpNewSeries.h  ccGeologicPlane.cpp  ccGeologicPlane.h  ccPlaneOrientation.cpp  ccPlaneOrientation.h  define2dselection.cpp  fitGeologicalOrientation.cpp  geoutils.cbp  plot_2d.cpp  plot_2d.h  qtHelper.cpp  qtHelper.h  split_point_cloud.cpp  test.h
qGEO/tools/: AttitudeToModel.cpp  AttitudeToModel.h  CMakeLists.txt  CloudMapper.cpp  CloudMapper.h  CloudToPlanarSelection.cpp  CloudToPlanarSelection.h  ComputeStratigraphicPosition.cpp  ComputeStratigraphicPosition.h  ComputeTimeSeries.cpp  ComputeTimeSeries.h  Edit.cpp  Edit.h  EvaluateStratigraphicPosition.cpp  EvaluateStratigraphicPosition.h  FindQWT.cmake  FitAttitude.cpp  FitAttitude.h  LoadSPCElement.cpp  LoadSPCElement.h  Makefile  OpenInComposer.cpp  OpenInComposer.h  OpenPlotsDialog.cpp  OpenPlotsDialog.h  Properties.h  SaveSPCElement.cpp  SaveSPCElement.h  SetUpNewSeries.cpp  SetUpNewSeries.h  define2dselection.cpp  define2dselection.h  point_types.h  qtHelper.cpp  qtHelper.h  split_point_cloud.cpp  split_point_cloud.h  test.cpp  test.h  test_cloud2image.cpp
qGEO/visualization/: CMakeLists.txt  MainScale.cpp  MainScale.h  PlotsContainer.cpp  PlotsContainer.h  PlotterDlg.cpp  PlotterDlg.h  PlotterDlg.ui  PlotterWidget.cpp  PlotterWidget.h  PropertiesViewerWidget.cpp  PropertiesViewerWidget.h  PropertiesViewerWidget.ui  SinglePlot.cpp  SinglePlot.h  plotter.cpp  plotter.h
sandbox/: CMakeLists.txt  align_ICP.cpp  compute_keypoints.cpp  example_nurbs_fitting_closed_curve.cpp  example_nurbs_fitting_curve.cpp  fileIO.cpp  keypoint_extraction.h  mm_match_keypoints.cpp  mm_match_keypoints_new.cpp  mm_matches.h  mm_read_keypoints.cpp  pointcloud2_reader.cpp  pointcloud2_reader.h  spc_compute_distances.cpp  test.cpp
sandbox/ties/: CMakeLists.txt  compute_ties.cpp  flann_index.cpp  flann_index.h  helpers.cpp  helpers.h  image_matches_mask.cpp  image_matches_mask.h  images_matches_matrix.cpp  images_matches_matrix.h  io.cpp  io.h  keypoints.h  keypoints_extractor.cpp  keypoints_extractor.h  matcher.cpp  matcher.h  matches.cpp  matches.h  matches_filter.cpp  matches_filter.h  options_parser.h
spc/: CMakeLists.txt
spc/calibration/: BasicResidualBlock.h  CalibrationDataDB.cpp  CalibrationDataDB.h  CalibrationDataEstimator.cpp  CalibrationDataEstimator.h  CalibrationDataFilter.cpp  CalibrationDataFilter.h  CalibrationFactors.h  CalibrationManager.cpp  CalibrationManager.h  CoreFunction.cpp  CoreFunction.h  CorePointData.cpp  CorePointData.h  CorrectionFactors.h  HelperMethods.h  IntensityCalibrator.cpp  IntensityCalibrator.h  IntensityCalibratrionModels.cpp  IntensityCalibratrionModels.h  IntensityModelBase.cpp  IntensityModelBase.h  IntensityModelFixedPars.cpp  IntensityModelFixedPars.h  IntensityModelLinear.h  IntensityModelLinearSolver.h  LinearCalibrator.h  MaterialEffects.cpp  MaterialEffects.h  ModelingFunctions.h  Observations.cpp  ParametersHolder.cpp  ParametersHolder.h  RBFCoreFunction.cpp  RBFCoreFunction.h  RBFEvaluator.cpp  RBFEvaluator.h  RBFFitter.cpp  RBFFitter.h  RBFKernels.cpp  (+8 more)
spc/ceres_calibration/: CMakeLists.txt  CalibrationManager.cpp  CalibrationManager.h  IntensityCalibrator.cpp  IntensityCalibrator.h  IntensityModelLinearSolver.h  ModelingFunctions.h  ParametersBlock.cpp  ResidualBlocks.h  SampledData.h  SimpleCalibration.cpp  SimpleCalibration.h
spc/common/: CMakeLists.txt  common.cpp  common.h  common_includes.h  eigen_extensions.h  eigen_serialization.hpp  geometry.cpp  geometry.h  io_helper.cpp  io_helper.h  macros.h  pcl_helper.cpp  pcl_helper.h  point_types.h  polynomials.cpp  polynomials.h  std_helpers.h  std_helpers.hpp  strings.cpp  strings.h  svmlib_helper.cpp  svmlib_helper.h
spc/core/: CMakeLists.txt  DtiClass.cpp  DtiClass.h  ElementBase.cpp  ElementBase.h  SerializableInterface.cpp  SerializableInterface.h  cerea_requested_types.hpp  common.h  eigen_extensions.h  eigen_matrix_base_plugin.h  fastapprox.h  file_operations.cpp  file_operations.h  filesystem.h  flagging.h  logging.cpp  logging.h  macros.h  macros_ptr.h  nanoflann_adapters.hpp  (+16 more)
submodules/: CMakeLists.txt
tests/: CMakeLists.txt  elements.cpp  testCylinder.cpp  testPlotter.cpp
tools/: CMakeLists.txt  append_orientations_to_pcd.cpp  apply_correction.cpp  apply_correction_curve.cpp  apply_rbf_model.cpp  bilateral.cpp  calibrate_rbf.cpp  calibration_testing.cpp  calibration_testing2.cpp  compute_calibration_dataset.cpp  compute_distances.cpp  compute_intensity_calibration.cpp  compute_intensity_spin.cpp  compute_normals_eigenvalues.cpp  compute_presence_curve.cpp  convert_cloud.cpp  convert_pcd_to_svm_format.cpp  distance_detrend.cpp  estimate_correction_curve.cpp  euclidean_cluster.cpp  extract_pois.cpp  fileIO.h  flannMatcher.cpp  get_mean_std_sampling_step.cpp  initial_align.cpp  merge_classification_results.cpp  merge_clouds_with_config.cpp  mm_keypoints_to_txt.cpp  mm_match_keypoints.cpp  mm_match_keypoints_new.cpp  produce_fields_list.cpp  produce_training_data.cpp  ptx2pcd.cpp  spc_align_ICP_old.cpp  spc_append_orientations_to_pcd.cpp  spc_apply_rbf_model.cpp  spc_bilateral.cpp  spc_calibrate_intensity_rbf.cpp  spc_calibrate_rbf.cpp  spc_calibration_testing.cpp  (+42 more)
(+605 files in other folders)
